# cjm-nbdev-utils

./: env_gen.html  env_gen.html.md  environment.yml  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
cjm_nbdev_utils/: env_gen.py
nbs/: env_gen.ipynb  index.ipynb  nbdev.yml
